--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -22,6 +22,23 @@
 @media only screen and (min-width: 1500px) {
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: $rubrik;
+  font-weight: 500;
+}
+
+.mainContainer {
+  padding-top: 0;
+}
+
+.paddingBottom {
+  padding-bottom: 1.5em;
+}
+
 .fixedHeaderContainer {
   background: $secondaryColor;
   color: $primaryColor;
@@ -42,11 +59,50 @@
   background-color: $brandColor;
 }
 
+.homeContainer .homeSplashFade {
+  background-color: $brandBlue;
+}
+.homeContainer .homeWrapper {
+  width: 100%;
+  padding-top: 2.5em;
+  padding-bottom: 0;
+  display: inline-grid;
+  grid-template-columns: 50% 50%;
+
+  color: #fff;
+  font-family: $rubrik;
+}
+
+.homeContainer .homeWrapper h2 {
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
 .homeContainer .homeWrapper .projectLogo {
   display: block;
   position: inherit;
+  padding: 0em 4em;
+  max-width: 540px;
+
+  align-self: start;
+}
+
+.homeContainer .homeWrapper .taglineBox {
+  text-align: left;
+  line-height: 1.2;
+}
+.homeContainer .homeWrapper .taglineBox h4 {
+  color: #00548b;
+  line-height: 1.6;
+  font-weight: 500;
 }
 
 a {
   color: $brandColor;
+}
+
+.textContainer {
+  text-align: left;
+  max-width: 40em;
+  margin: 0 auto;
 }
