--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -14,6 +14,15 @@
 }
 
 @media only screen and (max-width: 1023px) {
+  div.homeContainer .homeWrapper {
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+  }
+
+  div.homeContainer .homeWrapper .projectLogo {
+    margin: 0 auto;
+    padding: 1em 0em 1em;
+  }
 }
 
 @media only screen and (min-width: 1400px) {
@@ -33,6 +42,13 @@ h5 {
 
 .blockContent ul {
   list-style: none;
+}
+
+#about ul {
+  list-style: disc;
+}
+#about .blockImage {
+  max-width: 400px;
 }
 
 .mainContainer {
