--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -130,3 +130,10 @@ a {
   max-width: 40em;
   margin: 0 auto;
 }
+
+.container.paddingTop {
+    padding-top: 40px;
+}
+.container.paddingBottom {
+    padding-bottom: 40px;
+}
